# makeanything

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  architecture.md  makeanything.md  poc-notes.md  proposal.md  pyproject.toml  spec.md  tutorial3-checklist.md
evidence/tutorial-3-screenshots/: README.md
src/studyflow/: __init__.py  app.py  cli.py  orchestrator.py  planner.py  retriever.py  reviewer.py
tests/: README.md  __init__.py  test_cli.py  test_flow.py  test_planner.py  test_retriever.py  test_web.py
